# voicebox

./: .auto-claude-security.json  .auto-claude-status  .biomeignore  .bumpversion.cfg  .claude_settings.json  .gitignore  BACKWARD_COMPATIBILITY_VERIFICATION.md  CHANGELOG.md  E2E_VERIFICATION_GUIDE.md  Makefile  README.md  SETUP.md  SUBTASK-1-3-VERIFICATION.md  SUBTASK-4-2-VERIFICATION.md  SUBTASK-4-4-SUMMARY.md  SUBTASK-4-4-VERIFICATION-REPORT.md  biome.json  package.json  verify_backward_compatibility.py  verify_f5_integration.py
app/: components.json  index.html  package.json
app/src/: App.tsx  index.css  main.tsx
backend/: E2E_VERIFICATION_GUIDE_E2.md  README.md  SUBTASK-4-3-VERIFICATION.md  __init__.py  build_binary.py  config.py  database.py  example_usage.py  history.py  main.py  models.py  profiles.py  requirements.txt  studio.py  transcribe.py  tts.py  voicebox-server.spec
backend/backends/: __init__.py  f5_backend.py  (+1 more)
data/: .gitkeep
docs/: ANALYSIS.md  BACKEND_COMPLETE.md  BACKEND_IMPLEMENTATION.md  BIOME_SETUP.md  COMPETITIVE_ANALYSIS.md  FRONTEND_PLAN.md  IMPLEMENTATION_STATUS.md  TAURI_PLAN.md
landing/: package.json
scripts/: build-server.sh  generate-api.sh
tauri/: index.html  package.json  vite.config.ts
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/icons/: icon.icns
tauri/src-tauri/src/: lib.rs  main.rs
tauri/src-tauri/src/audio_capture/: macos.rs  mod.rs  windows.rs
tauri/src-tauri/tests/: audio_capture_test.rs
web/: package.json  tsconfig.json  vite.config.ts
(+68 files in other folders)
